# wallchanger

./: README.md  pyproject.toml
tests/: test_config.py
tests/assets/: config.conf
wallchanger/: conf.ini  wallchanger.py
