[tool.poetry]
name = "plasma-wallchanger"
version = "0.1.0"
description = ""
authors = ["Bithive <bithive@bithive.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
